; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_inc.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_esil2reil.c_reil_inc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @reil_inc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reil_inc(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32* @reil_pop_arg(i32* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %20

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @r_anal_esil_pushnum(i32* %11, i32 1)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @reil_push_arg(i32* %13, i32* %14)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @reil_add(i32* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @R_FREE(i32* %18)
  store i32 1, i32* %2, align 4
  br label %20

20:                                               ; preds = %10, %9
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32* @reil_pop_arg(i32*) #1

declare dso_local i32 @r_anal_esil_pushnum(i32*, i32) #1

declare dso_local i32 @reil_push_arg(i32*, i32*) #1

declare dso_local i32 @reil_add(i32*) #1

declare dso_local i32 @R_FREE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
